@@ -1,6 +1,8 @@
 package com.grocart.grocart.Controller;
 
-import com.grocart.grocart.DTO.OrderDTO;
+import com.grocart.grocart.DTO.CustomerOrderResponseDTO;
+import com.grocart.grocart.DTO.CustomerOrderItemResponseDTO;
+import com.grocart.grocart.DTO.CustomerProductResponseDTO;
 import com.grocart.grocart.Entities.Customer;
 import com.grocart.grocart.Entities.Order;
 import com.grocart.grocart.Services.CustomerService;
@@ -12,7 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/customer")
@@ -24,7 +26,6 @@ public class CustomerController {
         this.customerService = customerService;
     }
 
-    // GET /api/user?email=someone@example.com
     @GetMapping
     public Map<String, Object> getUserByEmail(@RequestParam String email) {
         Customer customer = customerService.getCustomerByEmail(email)
@@ -32,13 +33,10 @@ public class CustomerController {
 
         List<Order> orders = customerService.getOrdersByEmail(email);
 
-        // Map orders to DTO
-        List<OrderDTO> orderDTOs = orders.stream()
-                .map(o -> new OrderDTO(
-                        o.getTrackingId()
-
-                ))
-                .toList();
+        // Map orders to DTO with full details
+        List<CustomerOrderResponseDTO> orderDTOs = orders.stream()
+                .map(this::convertToCustomerOrderResponseDTO)
+                .collect(Collectors.toList());
 
         Map<String, Object> response = new HashMap<>();
         response.put("firstName", customer.getFirstName());
@@ -48,5 +46,77 @@ public class CustomerController {
         response.put("orders", orderDTOs);
 
         return response;
+    }
+
+    private CustomerOrderResponseDTO convertToCustomerOrderResponseDTO(Order order) {
+        CustomerOrderResponseDTO dto = new CustomerOrderResponseDTO();
+
+        // Basic order info
+        dto.setId(order.getId());
+        dto.setTrackingId(order.getTrackingId());
+
+        // Customer/Shipping info
+        dto.setFirstName(order.getFirstName());
+        dto.setLastName(order.getLastName());
+        dto.setEmail(order.getEmail());
+        dto.setPhone(order.getPhone());
+        dto.setAddress(order.getAddress());
+        dto.setCity(order.getCity());
+        dto.setProvince(order.getProvince());
+        dto.setPostalCode(order.getPostalCode());
+
+        // Totals
+        dto.setSubtotal(order.getSubtotal());
+        dto.setTax(order.getTax());
+        dto.setDiscount(order.getDiscount());
+        dto.setTotal(order.getTotal());
+
+        // Status and timestamps
+        dto.setStatus(order.getStatus());
+        dto.setCreatedAt(order.getCreatedAt());
+        dto.setUpdatedAt(order.getUpdatedAt());
+
+        // Map order items
+        if (order.getItems() != null) {
+            List<CustomerOrderItemResponseDTO> itemDTOs = order.getItems().stream()
+                    .map(this::convertToCustomerOrderItemResponseDTO)
+                    .collect(Collectors.toList());
+            dto.setItems(itemDTOs);
+        }
+
+        return dto;
+    }
+
+    private CustomerOrderItemResponseDTO convertToCustomerOrderItemResponseDTO(com.grocart.grocart.Entities.OrderItem item) {
+        CustomerOrderItemResponseDTO dto = new CustomerOrderItemResponseDTO();
+        dto.setId(item.getId());
+        dto.setQuantity(item.getQuantity());
+        dto.setPriceAtPurchase(item.getPriceAtPurchase());
+
+        // Map product details
+        if (item.getProduct() != null) {
+            dto.setProduct(convertToCustomerProductResponseDTO(item.getProduct()));
+        }
+
+        return dto;
+    }
+
+    private CustomerProductResponseDTO convertToCustomerProductResponseDTO(com.grocart.grocart.Entities.Product product) {
+        CustomerProductResponseDTO dto = new CustomerProductResponseDTO();
+        dto.setId(product.getId());
+        dto.setProduct(product.getProduct());
+        dto.setOriginalPrice(product.getOriginalPrice());
+        dto.setOfferPrice(product.getOfferPrice());
+        dto.setDescription(product.getDescription());
+        dto.setStock(product.getStock());
+        dto.setQuantity(product.getQuantity());
+        dto.setImageUrl(product.getImageUrl());
+
+        // Set category name only (to avoid lazy loading issues)
+        if (product.getCategory() != null) {
+            dto.setCategoryName(product.getCategory().getName());
+        }
+
+        return dto;
     }
 }
